<?xml version="1.0"?>
<package>
  <name>sia10f_control</name>
  <version>0.0.0</version>
  <description>The sia10f_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="user@todo.todo">user</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/sia10f_control</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_manager_tests</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>force_torque_sensor_controller</build_depend>
  <build_depend>forward_command_controller</build_depend>
  <build_depend>gripper_action_controller</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>imu_sensor_controller</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_manipulation</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rqt_joint_trajectory_controller</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_manager_tests</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>
  <run_depend>forward_command_controller</run_depend>
  <run_depend>gripper_action_controller</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>imu_sensor_controller</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_manipulation</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_joint_trajectory_controller</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>velocity_controllers</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
